testdata/language-features/basic-values/case03.reject.lc
value1 = case () of
  1 -> ()
  _ -> ()
